[project]
name = "algo"
version = "0.1.0"
description = "This is just me doing Data Structures and Algorithms using python specifically"
authors = [
    {name = "leouduh",email = "chigozieuduh.cu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
